--- a/src/pages/stocks/index.astro
+++ b/src/pages/stocks/index.astro
@@ -6,7 +6,7 @@ import AnalysisHubManager from '../../components/organisms/AnalysisHubManager.sv
 
 <MainTerminal title="個股分析" fullWidth={true}>
     <div class="relative pb-20 pt-4 px-4 lg:px-6">
-        <AnalysisHubManager client:idle />
+        <AnalysisHubManager client:load />
 
         <!-- Signal Stream Footer -->
         <div
