--- a/src/pages/strategy.astro
+++ b/src/pages/strategy.astro
@@ -5,6 +5,6 @@ import StrategyMonitor from '../components/organisms/StrategyMonitor.svelte';
 
 <MainTerminal title="策略回測" fullWidth={true}>
     <div class="relative px-4 lg:px-6">
-        <StrategyMonitor client:idle />
+        <StrategyMonitor client:load />
     </div>
 </MainTerminal>
