--- a/src/pages/watchlist.astro
+++ b/src/pages/watchlist.astro
@@ -5,6 +5,6 @@ import WatchlistManager from '../components/organisms/WatchlistManager.svelte';
 
 <MainTerminal title="自選監控中心" fullWidth={true}>
     <div class="relative px-4 lg:px-6">
-        <WatchlistManager client:idle />
+        <WatchlistManager client:load />
     </div>
 </MainTerminal>
