feat: Enhance chart components with responsive design and utility classes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1247,3 +1247,4 @@
 .flash {
     animation: rowFlash 0.8s ease-out;
 }
+\n/* Chart utility */\n.chart-fill { width:100%; height:100%; display:block; }\n
