--- a/src/components/molecules/TemporalPriceChart.astro
+++ b/src/components/molecules/TemporalPriceChart.astro
@@ -64,7 +64,7 @@ const prevPrice = hasData && chartPoints.length > 1 ? chartPoints[chartPoints.le
 const priceChange = latestPrice - prevPrice;
 ---
 
-<div class="lg:col-span-8 glass-card p-8 h-[450px] flex flex-col relative overflow-hidden group">
+<div class="lg:col-span-8 glass-card p-8 flex-1 flex flex-col relative overflow-hidden group h-full w-full">
     <div
         class="absolute top-0 right-0 p-8 opacity-[0.02] group-hover:opacity-[0.05] transition-opacity pointer-events-none"
     >
