--- a/src/components/organisms/TabSector.astro
+++ b/src/components/organisms/TabSector.astro
@@ -73,7 +73,7 @@ const peers = [
 
     <!-- Relative Strength vs Sector -->
     <div class="grid grid-cols-1 lg:grid-cols-12 gap-6">
-        <div class="lg:col-span-8 glass-card p-6 h-[400px] flex flex-col">
+        <div class="lg:col-span-8 glass-card p-6 flex-1 flex flex-col h-full w-full">
             <h3 class="terminal-label mb-6">相對強度分析 (Relative Strength Index)</h3>
             <div class="flex-1 border-l-2 border-b-2 border-border/30 relative m-4">
                 <!-- Mock Chart Line -->
